--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -63,108 +63,115 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>io.swagger.codegen.v3</groupId>
-				<artifactId>swagger-codegen-maven-plugin</artifactId>
-				<version>${swagger-codegen-maven-plugin.version}</version>
-				<executions>
-					<execution>
-					  <id>generate_banking_api_ais</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-              <inputSpec>${openapi-spec-file-location-banking_api_ais}</inputSpec>
-							<language>spring</language>
-							<output>${project.build.directory}/generated-sources/open-api/</output>
-							<generateApiTests>false</generateApiTests>
-							<generateModelTests>false</generateModelTests>
-							<configOptions>
-								<sourceFolder>src/main/java</sourceFolder>
-								<basePackage>de.adorsys.opba.bankingapi.ais</basePackage>
-								<configPackage>de.adorsys.opba.bankingapi.config</configPackage>
-								<modelPackage>de.adorsys.opba.bankingapi.ais.model</modelPackage>
-								<apiPackage>de.adorsys.opba.bankingapi.ais.resource</apiPackage>
-								<interfaceOnly>true</interfaceOnly>
-								<skipOverwrite>true</skipOverwrite>
-								<dateLibrary>java8</dateLibrary>
-								<java8>true</java8>
-								<implicitHeaders>false</implicitHeaders>
-								<delegatePattern>true</delegatePattern>
-								<useTags>true</useTags>
-								<library>spring-mvc</library>
-								<swaggerDocketConfig>false</swaggerDocketConfig>
-							</configOptions>
-							<generateApiTests>false</generateApiTests>
-							<generateModelTests>false</generateModelTests>
-						</configuration>
-					</execution>
-          <execution>
-            <id>generate_tpp_bank_search_api</id>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <inputSpec>${openapi-spec-file-location-tpp_bank_search_api}</inputSpec>
-              <language>spring</language>
-              <output>${project.build.directory}/generated-sources/open-api/</output>
-              <configOptions>
-                <sourceFolder>src/main</sourceFolder>
-                <basePackage>de.adorsys.opba.bankingapi.search</basePackage>
-                <configPackage>de.adorsys.opba.bankingapi.config</configPackage>
-                <modelPackage>de.adorsys.opba.bankingapi.search.model</modelPackage>
-                <apiPackage>de.adorsys.opba.bankingapi.search.resource</apiPackage>
-                <interfaceOnly>true</interfaceOnly>
-                <skipOverwrite>true</skipOverwrite>
-                <dateLibrary>java8</dateLibrary>
-                <java8>true</java8>
-                <implicitHeaders>false</implicitHeaders>
-                <delegatePattern>true</delegatePattern>
-                <useTags>true</useTags>
-                <library>spring-mvc</library>
-                <swaggerDocketConfig>false</swaggerDocketConfig>
-              </configOptions>
-              <generateApiTests>false</generateApiTests>
-              <generateModelTests>false</generateModelTests>
-            </configuration>
-          </execution>
-          <execution>
-            <id>generate_tpp_token_api</id>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <inputSpec>${openapi-spec-file-location-tpp_token_api}</inputSpec>
-              <language>spring</language>
-              <output>${project.build.directory}/generated-sources/open-api/</output>
-              <configOptions>
-                <sourceFolder>src/main</sourceFolder>
-                <basePackage>de.adorsys.opba.bankingapi.token</basePackage>
-                <configPackage>de.adorsys.opba.bankingapi.config</configPackage>
-                <modelPackage>de.adorsys.opba.bankingapi.token.model</modelPackage>
-                <apiPackage>de.adorsys.opba.bankingapi.token.resource</apiPackage>
-                <interfaceOnly>true</interfaceOnly>
-                <skipOverwrite>true</skipOverwrite>
-                <dateLibrary>java8</dateLibrary>
-                <java8>true</java8>
-                <implicitHeaders>false</implicitHeaders>
-                <delegatePattern>true</delegatePattern>
-                <useTags>true</useTags>
-                <library>spring-mvc</library>
-                <swaggerDocketConfig>false</swaggerDocketConfig>
-              </configOptions>
-              <generateApiTests>false</generateApiTests>
-              <generateModelTests>false</generateModelTests>
-            </configuration>
-          </execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>io.swagger.codegen.v3</groupId>
-						<artifactId>swagger-codegen-generators</artifactId>
-						<version>${swagger-codegen-generators.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+                <groupId>io.swagger.codegen.v3</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <version>${swagger-codegen-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>generate_banking_api_ais</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${openapi-spec-file-location-banking_api_ais}</inputSpec>
+                            <language>spring</language>
+                            <output>${project.build.directory}/generated-sources/open-api/</output>
+                            <configOptions>
+                                <sourceFolder>src/main/java</sourceFolder>
+                                <basePackage>de.adorsys.opba.tppbankingapi.ais</basePackage>
+                                <configPackage>de.adorsys.opba.tppbankingapi.config</configPackage>
+                                <modelPackage>de.adorsys.opba.tppbankingapi.ais.model</modelPackage>
+                                <apiPackage>de.adorsys.opba.tppbankingapi.ais.resource</apiPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <skipOverwrite>true</skipOverwrite>
+                                <dateLibrary>java8</dateLibrary>
+                                <java8>true</java8>
+                                <implicitHeaders>false</implicitHeaders>
+                                <delegatePattern>true</delegatePattern>
+                                <useTags>true</useTags>
+                                <library>spring-mvc</library>
+                                <swaggerDocketConfig>false</swaggerDocketConfig>
+                            </configOptions>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateModelDocumentation>false</generateModelDocumentation>
+                            <generateSupportingFiles>false</generateSupportingFiles>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>generate_tpp_bank_search_api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${openapi-spec-file-location-tpp_bank_search_api}</inputSpec>
+                            <language>spring</language>
+                            <output>${project.build.directory}/generated-sources/open-api/</output>
+                            <configOptions>
+                                <sourceFolder>src/main/java</sourceFolder>
+                                <basePackage>de.adorsys.opba.tppbankingapi.search</basePackage>
+                                <configPackage>de.adorsys.opba.tppbankingapi.config</configPackage>
+                                <modelPackage>de.adorsys.opba.tppbankingapi.search.model</modelPackage>
+                                <apiPackage>de.adorsys.opba.tppbankingapi.search.resource</apiPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <skipOverwrite>true</skipOverwrite>
+                                <dateLibrary>java8</dateLibrary>
+                                <java8>true</java8>
+                                <implicitHeaders>false</implicitHeaders>
+                                <delegatePattern>true</delegatePattern>
+                                <useTags>true</useTags>
+                                <library>spring-mvc</library>
+                                <swaggerDocketConfig>false</swaggerDocketConfig>
+                            </configOptions>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateModelDocumentation>false</generateModelDocumentation>
+                            <generateSupportingFiles>false</generateSupportingFiles>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>generate_tpp_token_api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${openapi-spec-file-location-tpp_token_api}</inputSpec>
+                            <language>spring</language>
+                            <output>${project.build.directory}/generated-sources/open-api/</output>
+                            <configOptions>
+                                <sourceFolder>src/main/java</sourceFolder>
+                                <basePackage>de.adorsys.opba.tppbankingapi.token</basePackage>
+                                <configPackage>de.adorsys.opba.tppbankingapi.config</configPackage>
+                                <modelPackage>de.adorsys.opba.tppbankingapi.token.model</modelPackage>
+                                <apiPackage>de.adorsys.opba.tppbankingapi.token.resource</apiPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <skipOverwrite>true</skipOverwrite>
+                                <dateLibrary>java8</dateLibrary>
+                                <java8>true</java8>
+                                <implicitHeaders>false</implicitHeaders>
+                                <delegatePattern>true</delegatePattern>
+                                <useTags>true</useTags>
+                                <library>spring-mvc</library>
+                                <swaggerDocketConfig>false</swaggerDocketConfig>
+                            </configOptions>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateModelDocumentation>false</generateModelDocumentation>
+                            <generateSupportingFiles>false</generateSupportingFiles>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.swagger.codegen.v3</groupId>
+                        <artifactId>swagger-codegen-generators</artifactId>
+                        <version>${swagger-codegen-generators.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
