--- a/fintech-examples/fintech-impl/src/test/resources/application.yml
+++ b/fintech-examples/fintech-impl/src/test/resources/application.yml
@@ -5,5 +5,15 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+  jpa:
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
+
 tpp:
   url: http://localhost:8086
+
+
+
+
+
