--- a/fintech-examples/fintech-ui/angular.json
+++ b/fintech-examples/fintech-ui/angular.json
@@ -24,7 +24,12 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "node_modules/font-awesome/css/font-awesome.css"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ],
             "scripts": []
           },
           "configurations": {
