--- a/consent-ui/nginx.conf
+++ b/consent-ui/nginx.conf
@@ -32,9 +32,10 @@ http {
       listen 4200;
       root /app/dist;
       add_header 'Access-Control-Allow-Origin' '*';
+      add_header 'Access-Control-Expose-Headers': '*';
 
       location /embedded-server/ {
-        proxy_pass http://open-banking-gateway:8085;
+        proxy_pass $BACKEND_URL/;
         proxy_set_header Host *;
       }
 
