--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
       maxAge: 300
       httpOnly: false
       path: /
-      sameSite: Lax
+      sameSite: none
       # sameSite: Strict|Lax|none
 
 tpp:
