--- a/consent-ui/nginx.conf
+++ b/consent-ui/nginx.conf
@@ -36,7 +36,10 @@ http {
 
       location /embedded-server/ {
         proxy_pass $BACKEND_URL/;
-        proxy_set_header Host $HOST;
+        proxy_set_header Host ${DOLLAR}host;
+        proxy_set_header X-Real-IP ${DOLLAR}remote_addr;
+        proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
       }
 
       location / {
